syntax = "proto3";

package com.embedd;
option go_package = "backend/core/proto;proto";


enum file_type {
  URL = 0;
  // add all supported file that in another document
  // check what with Google docs
};

message ChunkingData {
// This is url where the file is located.
// Based on the chunking type it will be a WEB URL (HTML type)
// Will be an S3/MINIO link with a proper authentication in case of a file
  string url = 1;
  int64  connector_id = 2;
  int64  document_id = 3; // 0 if new
}